# kcm-grub2

./: CMakeLists.txt  INSTALL
src/: CMakeLists.txt  grubdata.cpp  grubdata.h  installDlg.cpp  kcm_grub2.cpp  kcm_grub2.h  kcm_grub2.json  kcm_grub2.kcfg  kcm_grub2.kcfgc  resources.qrc
src/contents/ui/: main.qml
src/helper/: CMakeLists.txt  helper.cpp
src/nerfed/: kcm_grub0.cpp  kcm_grub0.h
src/package/contents/ui/: main.qml
